Extract common funtions into shared module.

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -2,46 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "13b92577-26a2-4cc0-88fa-a5cff60fc06b",
+   "execution_count": 11,
+   "id": "bb707b6f-227b-45f3-a378-03dc2ceb23fe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['e', 'f', 'g']"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def to_hex_str(n):\n",
-    "    return '{:02x}'.format(n)\n",
-    "\n",
-    "def str_to_list(string):\n",
-    "    return [ord(c) for c in string]\n",
-    "\n",
-    "def hex_str_to_list(hex_str):\n",
-    "    return [int(hex_str[i:i+2], 16) for i in range(0, len(hex_str), 2)]\n",
-    "\n",
-    "def to_ascii(list):\n",
-    "    return [chr(x) if x >= 32 and x <= 122 else '?' for x in list]\n",
-    "\n",
-    "def is_alpha(n):\n",
-    "    return (n >= 65 and n <= 90) or (n >= 97 and n <= 122)\n",
-    "\n",
-    "def xor(l1, l2):\n",
-    "    return [l1[i] ^ l2[i] for i in range(min(len(l1), len(l2)))]\n",
-    "\n",
-    "to_ascii(to_char_list(\"656667\"))"
+    "import common"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "id": "9faa84d5-36b9-4a3c-ade9-3ea3a3e1ddd5",
    "metadata": {},
    "outputs": [],
@@ -59,16 +30,16 @@
     "\"466d06ece998b7a2fb1d464fed2ced7641ddaa3cc31c9941cf110abbf409ed39598005b3399ccfafb61d0315fca0a314be138a9f32503bedac8067f03adbf3575c3b8edc9ba7f537530541ab0f9f3cd04ff50d66f1d559ba520e89a2cb2a83\",\n",
     "]\n",
     "\n",
-    "target = hex_str_to_list(\"32510ba9babebbbefd001547a810e67149caee11d945cd7fc81a05e9f85aac650e9052ba6a8cd8257bf14d13e6f0a803b54fde9e77472dbff89d71b57bddef121336cb85ccb8f3315f4b52e301d16e9f52f904\")\n",
+    "target = common.hex_str_to_bytes(\"32510ba9babebbbefd001547a810e67149caee11d945cd7fc81a05e9f85aac650e9052ba6a8cd8257bf14d13e6f0a803b54fde9e77472dbff89d71b57bddef121336cb85ccb8f3315f4b52e301d16e9f52f904\")\n",
     "\n",
     "# Interpret each ctext as a hex string so we can do xor on it.\n",
-    "ctexts = [hex_str_to_list(ctext) for ctext in ctexts]\n",
+    "ctexts = [common.hex_str_to_bytes(ctext) for ctext in ctexts]\n",
     "min_len = min([len(ctext) for ctext in ctexts])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "id": "85ce6fd7-eba2-4f05-b28e-141411f10950",
    "metadata": {},
    "outputs": [
@@ -78,7 +49,7 @@
        "[0, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "id": "ed53d558-8c69-480a-8bab-ee0969a3f1ab",
    "metadata": {},
    "outputs": [
@@ -107,37 +78,42 @@
     "print(xors)\n",
     "for i in range(len(ctexts)):\n",
     "    for j in range(len(ctexts)):\n",
-    "        xors[i].append(xor(ctexts[i], ctexts[j]))\n"
+    "        xors[i].append(common.xor(ctexts[i], ctexts[j]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 44,
    "id": "8f6a50d0-92cb-45e3-b7f2-1b5d8cee38ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If a character in an xor is in a-z or A-Z, one input must have been a space, and the other the alphabetical character with reverse capitalization (e.g. A -> a).\n",
-    "# To determine which is which, we can take each cipher text in that position and see which produces more alphabetical characters when xor'd with other ciphertexts.\n",
-    "# Whichever produces more is the space. Once we know which is the space, we can xor the ciphertext with space to get the key value in that position.\n",
+    "# If a character in an xor is in a-z or A-Z, one input must have been a space, \n",
+    "# and the other the alphabetical character with reverse capitalization (e.g. A -> a).\n",
+    "# To determine which is which, we can take the byte from each input ciphertexts and see \n",
+    "# which produces more alphabetical characters when xor'd with other ciphertexts.\n",
+    "# Whichever produces more is the space. \n",
+    "# Once we know which is the space, we can xor the ciphertext with space to get \n",
+    "# the key value in that position.\n",
     "\n",
+    "SPACE = 32\n",
     "counts = [0] * 100\n",
     "key = [0] * 100\n",
     "for i in range(len(xors)):\n",
     "    for k in range(min_len):\n",
     "        count = 0\n",
     "        for j in range(len(xors)):    \n",
-    "            if is_alpha(xors[i][j][k]):\n",
+    "            if common.is_alpha(xors[i][j][k]):\n",
     "                count += 1\n",
     "        if count > counts[k]:\n",
     "            counts[k] = count\n",
-    "            key[k] = ctexts[i][k] ^ 32\n",
+    "            key[k] = ctexts[i][k] ^ SPACE # xor the presumed plaintext to get the key\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 45,
    "id": "b4132229-42c0-4f70-bdf8-1a59a33e0432",
    "metadata": {},
    "outputs": [
@@ -246,7 +222,7 @@
        " 0]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,262 +233,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 46,
    "id": "9cb8fe27-ef63-43f5-9d46-530bfd6407b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['T',\n",
-       " 'h',\n",
-       " 'e',\n",
-       " ' ',\n",
-       " 's',\n",
-       " 'e',\n",
-       " 'c',\n",
-       " 'u',\n",
-       " 'e',\n",
-       " 't',\n",
-       " ' ',\n",
-       " 'm',\n",
-       " 'e',\n",
-       " 's',\n",
-       " '<',\n",
-       " 'a',\n",
-       " 'g',\n",
-       " 'e',\n",
-       " '-',\n",
-       " 'i',\n",
-       " 's',\n",
-       " ':',\n",
-       " ' ',\n",
-       " 'W',\n",
-       " 'h',\n",
-       " 't',\n",
-       " 'n',\n",
-       " ' ',\n",
-       " 'u',\n",
-       " 's',\n",
-       " 'i',\n",
-       " 'n',\n",
-       " 'g',\n",
-       " ' ',\n",
-       " 'a',\n",
-       " 'a',\n",
-       " '?',\n",
-       " 't',\n",
-       " 'r',\n",
-       " 'e',\n",
-       " 'a',\n",
-       " 'm',\n",
-       " ' ',\n",
-       " 'c',\n",
-       " 'i',\n",
-       " 'p',\n",
-       " 'h',\n",
-       " 'e',\n",
-       " 'r',\n",
-       " ',',\n",
-       " ' ',\n",
-       " 'n',\n",
-       " 'e',\n",
-       " 'v',\n",
-       " 'e',\n",
-       " 'r',\n",
-       " '-',\n",
-       " 'u',\n",
-       " 's',\n",
-       " 'e',\n",
-       " ' ',\n",
-       " 't',\n",
-       " 'h',\n",
-       " 'e',\n",
-       " ' ',\n",
-       " 'k',\n",
-       " 'e',\n",
-       " 'y',\n",
-       " ' ',\n",
-       " 'm',\n",
-       " 'o',\n",
-       " 'r',\n",
-       " 'e',\n",
-       " ' ',\n",
-       " 't',\n",
-       " 'h',\n",
-       " 'a',\n",
-       " 'n',\n",
-       " ' ',\n",
-       " 'o',\n",
-       " 'n',\n",
-       " 'c',\n",
-       " 'e']"
+       "'The secuet mes<age-is: Whtn using aa~tream cipher, never-use the key more than once'"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "to_ascii([target[i] ^ key[i] if key[i] > 0 else 45 for i in range(len(target))])"
+    "common.bytes_to_ascii([target[i] ^ key[i] if key[i] > 0 else 45 for i in range(len(target))])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 47,
    "id": "d4e062c8-533c-4f01-9681-f8ca989448e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['W',\n",
-       " 'e',\n",
-       " ' ',\n",
-       " 'c',\n",
-       " 'a',\n",
-       " 'n',\n",
-       " ' ',\n",
-       " 'a',\n",
-       " 'a',\n",
-       " 'c',\n",
-       " 't',\n",
-       " 'o',\n",
-       " 'r',\n",
-       " ' ',\n",
-       " ';',\n",
-       " 'h',\n",
-       " 'e',\n",
-       " ' ',\n",
-       " '-',\n",
-       " 'u',\n",
-       " 'm',\n",
-       " 'b',\n",
-       " 'e',\n",
-       " 'r',\n",
-       " ' ',\n",
-       " ' ',\n",
-       " '5',\n",
-       " ' ',\n",
-       " 'w',\n",
-       " 'i',\n",
-       " 't',\n",
-       " 'h',\n",
-       " ' ',\n",
-       " 'q',\n",
-       " 'u',\n",
-       " ' ',\n",
-       " 'c',\n",
-       " 't',\n",
-       " 'u',\n",
-       " 'm',\n",
-       " ' ',\n",
-       " 'c',\n",
-       " 'o',\n",
-       " 'm',\n",
-       " 'p',\n",
-       " 'u',\n",
-       " 't',\n",
-       " 'e',\n",
-       " 'r',\n",
-       " 's',\n",
-       " '.',\n",
-       " ' ',\n",
-       " 'W',\n",
-       " 'e',\n",
-       " ' ',\n",
-       " 'c',\n",
-       " '-',\n",
-       " 'n',\n",
-       " ' ',\n",
-       " 'a',\n",
-       " 'l',\n",
-       " 's',\n",
-       " 'o',\n",
-       " ' ',\n",
-       " 'f',\n",
-       " 'a',\n",
-       " 'c',\n",
-       " 't',\n",
-       " 'o',\n",
-       " 'r',\n",
-       " ' ',\n",
-       " 't',\n",
-       " 'h',\n",
-       " 'e',\n",
-       " ' ',\n",
-       " 'n',\n",
-       " 'u',\n",
-       " 'm',\n",
-       " 'b',\n",
-       " 'e',\n",
-       " 'r',\n",
-       " ' ',\n",
-       " '1',\n",
-       " '5',\n",
-       " ' ',\n",
-       " 'w',\n",
-       " '-',\n",
-       " 't',\n",
-       " 'h',\n",
-       " ' ',\n",
-       " 'a',\n",
-       " ' ',\n",
-       " '-',\n",
-       " 'o',\n",
-       " 'g']"
+       "'We can aactor ;he -umber  5 with qu ctum computers. We c-n also factor the number 15 w-th a -og'"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "to_ascii([ctexts[0][i] ^ key[i] if key[i] > 0 else 45 for i in range(min_len)])"
+    "common.bytes_to_ascii([ctexts[0][i] ^ key[i] if key[i] > 0 else 45 for i in range(min_len)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0259105-cf9f-4393-893a-c241bfcdfdd3",
+   "id": "b2d2f43a-d380-4206-9157-5b0fde208c26",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Try cribbing various words over the xord' text. If there is a match in message i, we should get a result that is entirely within standard ASCII (< 128) for all\n",
-    "# xor pairs with i.\n",
-    "\n",
-    "cribs = [\n",
-    "\"the\",\n",
-    "\"and\",\n",
-    "\"that\",\n",
-    "\"have\",\n",
-    "\"for\",\n",
-    "\"not\",\n",
-    "\"with\",\n",
-    "\"you\",\n",
-    "\"this\",\n",
-    "\"she\"\n",
-    "]\n",
-    "\n",
-    "cribs = [str_to_list(c) for c in cribs]\n",
-    "\n",
-    "for crib in cribs:\n",
-    "    for i in range(len(xors)):\n",
-    "        for k in range(min_len):\n",
-    "            score = 0\n",
-    "            for j in range(len(xors)):\n",
-    "                if i == j:\n",
-    "                    continue\n",
-    "                result = xor(crib, xors[i][j][k:k+len(crib)])\n",
-    "                if sum([1 if r < 127 else 0 for r in result]) == len(crib):\n",
-    "                    score += 1\n",
-    "            if score == len(ctexts) - 1:\n",
-    "                # We have a match.\n",
-    "                key[k:k+len(crib)] = xor(ctext[i][k:k+len(crib)], crib)\n",
-    "                "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "287eb0b6-8bbb-479c-bbb7-435c60c2772f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
